report.txt
[100%] Built target test0

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test0 is a Catch v2.13.4 host application.
Run with -? for options

-------------------------------------------------------------------------------
Test 1/3 of find
-------------------------------------------------------------------------------
/mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t0.cpp:23
...............................................................................

/mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t0.cpp:27: FAILED:
  CHECKED_IF( d==4 )
with expansion:
  9 == 4

-------------------------------------------------------------------------------
Test 2/3 of find 
-------------------------------------------------------------------------------
/mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t0.cpp:33
...............................................................................

/mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t0.cpp:37: FAILED:
  CHECKED_IF( d==7 )
with expansion:
  9 == 7

-------------------------------------------------------------------------------
Test 3/3 of find
-------------------------------------------------------------------------------
/mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t0.cpp:42
...............................................................................

/mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t0.cpp:48: FAILED:
  CHECKED_IF( d==12 )
with expansion:
  14 == 12

===============================================================================
test cases: 3 | 3 failed
assertions: 3 | 3 failed

[100%] Built target test1

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test1 is a Catch v2.13.4 host application.
Run with -? for options

-------------------------------------------------------------------------------
Test0
-------------------------------------------------------------------------------
/mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t1.cpp:24
...............................................................................

/mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t1.cpp:30: FAILED:
  CHECKED_IF( d==4 )
with expansion:
  9 == 4

-------------------------------------------------------------------------------
Test1
-------------------------------------------------------------------------------
/mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t1.cpp:35
...............................................................................

/mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t1.cpp:41: FAILED:
  CHECKED_IF( d==7 )
with expansion:
  9 == 7

===============================================================================
test cases: 2 | 2 failed
assertions: 2 | 2 failed

Scanning dependencies of target test2
make[3]: Warning: File 'CMakeFiles/test2.dir/depend.make' has modification time 0.61 s in the future
[ 33%] Building CXX object CMakeFiles/test2.dir/t2.cpp.o
In file included from /mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/test.hpp:2,
                 from /mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t2.cpp:6:
/mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t2.cpp:23:1: error: expected ‘,’ or ‘;’ before ‘static’
   23 | TEST_CASE("Test0", "0") {
      | ^~~~~~~~~
/mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t2.cpp:23:1: error: ‘____C_A_T_C_H____T_E_S_T____0’ was not declared in this scope
   23 | TEST_CASE("Test0", "0") {
      | ^~~~~~~~~
make[3]: *** [CMakeFiles/test2.dir/build.make:76: CMakeFiles/test2.dir/t2.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:171: CMakeFiles/test2.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:178: CMakeFiles/test2.dir/rule] Error 2
make: *** [Makefile:152: test2] Error 2
[100%] Built target test3

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test3 is a Catch v2.13.4 host application.
Run with -? for options

-------------------------------------------------------------------------------
Test0
-------------------------------------------------------------------------------
/mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t3.cpp:24
...............................................................................

/mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t3.cpp:31: FAILED:
  CHECKED_IF( v.size()==5 )
with expansion:
  0 == 5

-------------------------------------------------------------------------------
Test1
-------------------------------------------------------------------------------
/mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t3.cpp:36
...............................................................................

/mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t3.cpp:44: FAILED:
  CHECKED_IF( v.size()==(org-3) )
with expansion:
  0 == 15

===============================================================================
test cases: 2 | 2 failed
assertions: 2 | 2 failed

[100%] Built target test4

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test4 is a Catch v2.13.4 host application.
Run with -? for options

-------------------------------------------------------------------------------
Test1
-------------------------------------------------------------------------------
/mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t4.cpp:28
...............................................................................

/mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t4.cpp:35: FAILED:
  CHECKED_IF( u==v )
with expansion:
  { 2, 5, 2, 2, 2, 4, 3, 9, 1 }
  ==
  { 1, 9, 3, 4, 2, 2, 2, 5, 2 }

===============================================================================
test cases: 1 | 1 failed
assertions: 1 | 1 failed

[100%] Built target test5

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test5 is a Catch v2.13.4 host application.
Run with -? for options

-------------------------------------------------------------------------------
Test0
-------------------------------------------------------------------------------
/mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t5.cpp:27
...............................................................................

/mnt/c/Users/hikma/source/repos/NDU-CSC413/hw0-sol/t5.cpp:33: FAILED:
  CHECKED_IF( (*v[0]==19 && *v[1]==18) )
with expansion:
  false

===============================================================================
test cases: 1 | 1 failed
assertions: 1 | 1 failed

[100%] Built target test6
===============================================================================
test cases: 1 | 1 passed
assertions: - none -

